# dot

./: AGENTS.md  Cargo.toml  README.md  build.rs  todo.md
.github/workflows/: release.yml
site/: index.html  main.js  style.css
src/: agent.rs  auth.rs  cli.rs  command.rs  config.rs  context.rs  extension.rs  headless.rs  lib.rs  main.rs  packages.rs  skills.rs  snapshot.rs
src/agent/: events.rs  mod.rs  profile.rs  prompt.txt  subagent.rs
src/auth/: copilot.rs  login.rs  mod.rs  ui.rs
src/db/: mod.rs  schema.rs
src/memory/: extract.rs  mod.rs  tools.rs
src/provider/: anthropic.rs  copilot.rs  dummy.rs  mod.rs  openai.rs
src/provider/anthropic/: auth.rs  mod.rs  stream.rs  types.rs
src/tools/: file.rs  glob.rs  grep.rs  mod.rs  patch.rs  shell.rs  web.rs
src/tui/: actions.rs  app.rs  event.rs  input.rs  markdown.rs  mod.rs  theme.rs  tools.rs  ui.rs  ui_popups.rs  ui_tools.rs  widgets.rs
src/tui/crepus/: modal.crepus  shell.crepus
src/tui/input/: mod.rs  modes.rs  mouse.rs  popups.rs
