[package]
name = "dot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP (for Anthropic client)
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# OpenAI
async-openai = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Auth/Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"

# URL building
url = "2"

# Markdown rendering
syntect = "5"

# Utilities
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
