[package]
name = "dot-ai"
version = "0.1.0"
edition = "2024"
description = "A minimal AI agent that lives in your terminal"
license = "MIT"
repository = "https://github.com/plyght/dot"
homepage = "https://github.com/plyght/dot"
readme = "README.md"
keywords = ["ai", "agent", "tui", "cli", "llm"]
categories = ["command-line-utilities"]

[lib]
name = "dot"
path = "src/lib.rs"

[[bin]]
name = "dot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP (for Anthropic client)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# OpenAI
async-openai = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Auth/Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"

# URL building
url = "2"

# Markdown rendering
syntect = "5"

# Utilities
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
